--- a/index.html
+++ b/index.html
@@ -2,43 +2,43 @@
 <html lang="en">
 
 <head>
-   <title>دروس المعلوماتية 2022 - 2023<< /title>
-         <meta charset="UTF-8">
-         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-         <style>
-            * {
-               font-family: "segoe UI";
-            }
+   <title>دروس المعلوماتية 2022 - 2023</title>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <style>
+      * {
+         font-family: "segoe UI";
+      }
 
-            body {
-               direction: rtl;
-               padding: 20px;
-            }
+      body {
+         direction: rtl;
+         padding: 20px;
+      }
 
-            a {
-               text-decoration: none;
-               display: block;
-               padding: 3px;
-               margin-bottom: 7px;
-            }
+      a {
+         text-decoration: none;
+         display: block;
+         padding: 3px;
+         margin-bottom: 7px;
+      }
 
-            a:hover {
-               text-decoration: underline;
-            }
+      a:hover {
+         text-decoration: underline;
+      }
 
-            h4 {
-               font-size: 17px;
-            }
-         </style>
+      h4 {
+         font-size: 17px;
+      }
+   </style>
 </head>
 
 <body>
    <h4>دروس المعلوماتية 2022 - 2023</h4>
-   <a href="/src/lessons/info-tech.pdf" target="_blank">تقنية المعلومات</a>
-   <a href="/src/lessons/computer-assembly.pdf" target="_blank">تجميع الحاسوب</a>
-   <a href="/src/lessons/os.pdf" target="_blank">نظام التشغيل</a>
-   <a href="/src/lessons/control-panel.pdf" target="_blank">لوحة التحكم</a>
-   <a href="/src/lessons/computer-security.pdf" target="_blank">حماية الحاسوب</a>
+   <a href="lessons/info-tech.pdf" target="_blank">تقنية المعلومات</a>
+   <a href="lessons/computer-assembly.pdf" target="_blank">تجميع الحاسوب</a>
+   <a href="lessons/os.pdf" target="_blank">نظام التشغيل</a>
+   <a href="lessons/control-panel.pdf" target="_blank">لوحة التحكم</a>
+   <a href="lessons/computer-security.pdf" target="_blank">حماية الحاسوب</a>
 </body>
 
 </html>
